Fix Kruin tree undo and remove build warnings